--- a/Notes/Notes.tex
+++ b/Notes/Notes.tex
@@ -72,5 +72,12 @@ It can also be recursive. For example,
 \subsection{Syntax Diagrams}
 \includegraphics{syntax diagramn.png}
 
+\subsection{Floating Point}
+Floating points are best suited for situations where you need to represent a wide range of values
+Whereas fixed-point is best when speed is more important than precision
 
+\begin{itemize}
+\item Absolute Error = The difference between the actual number and the rounded number
+\item Relative Error = $(x - y) / x$
+\end{itemize}
 \end{document}
