--- a/Notes/Notes.tex
+++ b/Notes/Notes.tex
@@ -80,4 +80,17 @@ Whereas fixed-point is best when speed is more important than precision
 \item Absolute Error = The difference between the actual number and the rounded number
 \item Relative Error = $(x - y) / x$
 \end{itemize}
+\subsection{Adder Circuits}
+The half adder is a circuit used to add 2 binary digits together,
+producing a sum and a carry
+
+$1 \oplus 1 = 0$
+$1 \& 1 = 1$
+so
+$1 + 1 = 0 carry 1$
+
+The full adder joins 2 half adders together with an OR gate, to carry forward the last calculation
+
+$A = 0, B = 1, A + B = 0 carry 1$
+$0 carry 1 + 0 = 0$
 \end{document}
